premier pour la creation du user endpoint

--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
 PORT=4000
-MYSQL_DATABASE=dbTheTiptop
 MYSQL_USER=Antipas
+HOSTNAME=localhost
+MYSQL_DATABASE=dbTheTiptop
 MYSQL_PASSWORD=L3F1delAnt1pas
 MYSQL_ROOT_PASSWORD=jesappelGr00t
+JWT_SECRET_KEY=votre_clé_secrète_de_ce_femeux_Groot_el_famoso
