--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "dev": "nodemon --watch ." 
+    "dev": "nodemon --watch ."
   },
   "repository": {
     "type": "git",
@@ -34,10 +34,15 @@
   ],
   "license": "ISC",
   "dependencies": {
+    "argon2": "^0.31.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.1",
+    "mysql2": "^3.6.0",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.0"
+    "swagger-ui-express": "^5.0.0",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
