exécussion à la fois nodemon --watch . et npm run seed en parallèle lorsque vous exécutez la commande npm run dev

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
     "seed": "node seed.js",
-    "dev": "nodemon --watch .",
+    "dev": "concurrently \"nodemon --watch .\" \"npm run seed\"",
     "start-with-seed": "npm run seed && npm start"
   },
   "repository": {
