update authors email

--- a/package.json
+++ b/package.json
@@ -27,11 +27,11 @@
     },
     {
       "name": "Aru",
-      "email": "aru@gmail.com"
+      "email": "alexandrehuynh@etudiant.ief2i.fr"
     },
     {
       "name": "craquitos",
-      "email": "talseum@gmail.com"
+      "email": "jhessyismael@etudiant.ief2i.fr"
     }
   ],
   "license": "ISC",
