--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@ HOSTNAME=localhost
 MYSQL_DATABASE=dbTheTiptop
 MYSQL_PASSWORD=L3F1delAnt1pas
 MYSQL_ROOT_PASSWORD=jesappelGr00t
-JWT_SECRET_KEY=votre_clé_secrète_de_ce_femeux_Groot_el_famoso
+JWT_SECRET_KEY=clé_secrète_de_ce_femeux_Groot_el_famoso
