--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -10,4 +10,13 @@ COPY . .
 
 EXPOSE 4000
 
+# COPY wait-for-it.sh /usr/wait-for-it.sh
+
+# RUN chmod +x /usr/wait-for-it.sh
+
+RUN apk update && apk add bash
+
+# CMD ["npm", "run", "dev"]
+
+# CMD ["/usr/wait-for-it.sh", "db:3306", "--", "npm", "run", "dev"]
 CMD ["npm", "run", "dev"]
