--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "init-db": "node init-db.js",
     "start": "node index.js",
     "seed": "node seed.js",
-    "dev": "npm run init-db && concurrently \"nodemon --watch .\"",
+    "dev": "npm run init-db && nodemon --watch .",
     "start-with-seed": "npm run init-db && npm start"
   },
   "repository": {
@@ -41,9 +41,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "faker": "^4.1.0",
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.1",
     "mysql2": "^3.6.0",
+    "path": "^0.12.7",
+    "sequelize": "^6.33.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
     "yup": "^1.2.0"
