--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 PORT=4000
 ACCESS_DB_PORT=3306
 MYSQL_USER=Antipas
-DB_HOST=db
+DBHOSTNAME=db
 MYSQL_DATABASE=dbTheTiptop
 MYSQL_PASSWORD=L3F1delAnt1pas
 MYSQL_ROOT_PASSWORD=jesappelGr00t
