--- a/docker-compose.api.dev.yml
+++ b/docker-compose.api.dev.yml
@@ -16,7 +16,7 @@ services:
       - public
     environment:
       - PORT=${PORT}
-      - DB_HOST=${DB_HOST}
+      - DBHOSTNAME=${DBHOSTNAME}
       - JWT_SECRET_KEY=${JWT_SECRET_KEY}
     volumes:
       - .:/api
