--- a/package.json
+++ b/package.json
@@ -38,13 +38,14 @@
   "license": "ISC",
   "dependencies": {
     "argon2": "^0.31.0",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "faker": "^4.1.0",
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.1",
-    "mysql2": "^3.6.0",
+    "mysql2": "^3.6.2",
     "path": "^0.12.7",
     "sequelize": "^6.33.0",
     "swagger-jsdoc": "^6.2.8",
