rename db container name

--- a/docker-compose.api.dev.yml
+++ b/docker-compose.api.dev.yml
@@ -38,7 +38,7 @@ services:
   #   depends_on:
   #     - db
   db:
-    container_name: TheTiptop_Bb
+    container_name: TheTiptop_Db
     image: mysql:latest
     env_file:
       - .env
