--- a/.env
+++ b/.env
@@ -6,3 +6,6 @@ MYSQL_DATABASE=dbTheTiptop
 MYSQL_PASSWORD=L3F1delAnt1pas
 MYSQL_ROOT_PASSWORD=jesappelGr00t
 JWT_SECRET_KEY=clé_secrète_de_ce_femeux_Groot_el_famoso
+SECRET_KEY=L4n3_4u_L4c_A_Bu_L3au
+GOOGLE_CLIENT_ID=781286080922-2cq7oc08i0pm2o48learp8c980dhs559.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
