--- a/package.json
+++ b/package.json
@@ -42,10 +42,13 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "faker": "^4.1.0",
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.1",
     "mysql2": "^3.6.2",
+    "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0",
     "path": "^0.12.7",
     "sequelize": "^6.33.0",
     "swagger-jsdoc": "^6.2.8",
