--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "faker": "^4.1.0",
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.1",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.6.2",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
