--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "jsonwebtoken": "^9.0.1",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.6.2",
+    "node-cron": "^3.0.2",
     "nodemailer": "^6.9.7",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
