--- a/.env
+++ b/.env
@@ -10,5 +10,5 @@ SECRET_KEY=L4n3_4u_L4c_A_Bu_L3au
 GOOGLE_CLIENT_ID=781286080922-2cq7oc08i0pm2o48learp8c980dhs559.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
 THETIPTOP_GMAIL_LOGIN=furiousducks196@gmail.com
-THETIPTOP_GMAIL_PASSWORD=7ncYTQM$5Yyr3XJ4
+# THETIPTOP_GMAIL_PASSWORD=7ncYTQM$5Yyr3XJ4
 THETIPTOP_API_URL=http://api.dev.dsp-archiwebo22b-ji-rw-ah.fr/
