Correction .env.test et db.test.js pour la connexion sequelize

--- a/.env.test
+++ b/.env.test
@@ -1,6 +1,6 @@
-CCESS_DB_PORT=3306
+ACCESS_DB_PORT=3308
 MYSQL_TEST_USER=testUser
-DB_TEST_HOST=dbtest
+DB_TEST_HOST=dbtests
 MYSQL_TEST_DATABASE=dbTheTiptopTest
 MYSQL_TEST_PASSWORD=testPassword
 MYSQL_TEST_ROOT_PASSWORD=testroot
