--- a/docker-compose.api.dev.yml
+++ b/docker-compose.api.dev.yml
@@ -54,7 +54,7 @@ services:
       - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
     volumes:
       - mysql-data:/var/lib/mysql
-  dbtets:
+  dbtests:
     container_name: TheTiptop_DbTest
     image: mysql:latest
     env_file:
