fix env variables for test

--- a/.env
+++ b/.env
@@ -12,3 +12,10 @@ GOOGLE_CLIENT_SECRET=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
 THETIPTOP_GMAIL_LOGIN=furiousducks196@gmail.com
 # THETIPTOP_GMAIL_PASSWORD=7ncYTQM$5Yyr3XJ4
 THETIPTOP_API_URL=http://api.dev.dsp-archiwebo22b-ji-rw-ah.fr/
+
+ACCESS_TEST_DB_PORT=3308
+MYSQL_TEST_USER=testUser
+DB_TEST_HOST=dbtests
+MYSQL_TEST_DATABASE=dbTheTiptopTest
+MYSQL_TEST_PASSWORD=testPassword
+MYSQL_TEST_ROOT_PASSWORD=testroot
