--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "concurrently": "^8.2.1",
     "cross-env": "^7.0.3",
     "mocha": "^10.2.0",
+    "mocha-junit-reporter": "^2.2.1",
     "nodemon": "^3.0.1",
     "supertest": "^6.3.3"
   }
