--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -13,7 +13,7 @@ sonar.exclusions=**/node_modules/**
 # Type de source
 sonar.sourceEncoding=UTF-8
 
-sonar.sources=src
+sonar.sources=.
 sonar.tests=tests
 sonar.language=js
 
