--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -14,8 +14,8 @@ sonar.exclusions=**/node_modules/**
 sonar.sourceEncoding=UTF-8
 
 sonar.sources=.
-sonar.tests=tests
-sonar.language=js
+#sonar.tests=tests
+#sonar.language=js
 
 # Informations sur la couverture de code (si vous utilisez Karma pour les tests)
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
