--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -14,11 +14,8 @@ sonar.exclusions=**/node_modules/**
 sonar.sourceEncoding=UTF-8
 
 sonar.sources=.
-#sonar.tests=tests
-#sonar.language=js
+sonar.tests=tests
+sonar.language=js
 
-# Informations sur la couverture de code (si vous utilisez Karma pour les tests)
-sonar.javascript.lcov.reportPaths=coverage/lcov.info
-
-# Chemin vers le répertoire TypeScript (si vous utilisez TypeScript)
-sonar.typescript.lcov.reportPaths=coverage/lcov.info
+# Chemin vers le répertoire du rapport Mocha Junit Reporter
+sonar.testExecutionReportPaths=/var/jenkins_home/workspace/the-tiptop-api-2_dev/test-results.xml
