Modify sonar properties files V2

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -14,8 +14,10 @@ sonar.exclusions=**/node_modules/**
 sonar.sourceEncoding=UTF-8
 
 sonar.sources=.
-sonar.tests=tests
-sonar.language=js
+sonar.tests=tests # On indique à Sonarqube qu'on a des tests dans le dossier TESTS pour qu'il comprenne mieux le code
+sonar.language=js # On indique à Sonarqube qu'il s'agit de code en JS
+
+sonar.test.exclusions=tests/setup.js # On exclu le fichier setup.js dans le dossier tests
 
 # Chemin vers le répertoire du rapport Mocha Junit Reporter
 sonar.testExecutionReportPaths=/var/jenkins_home/workspace/the-tiptop-api-2_dev/test-results.xml
