--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -14,8 +14,10 @@ sonar.exclusions=**/node_modules/**
 sonar.sourceEncoding=UTF-8
 
 sonar.sources=.
-sonar.tests=tests # On indique à Sonarqube qu'on a des tests dans le dossier TESTS pour qu'il comprenne mieux le code
-sonar.language=js # On indique à Sonarqube qu'il s'agit de code en JS
+# On indique à Sonarqube qu'on a des tests dans le dossier TESTS pour qu'il comprenne mieux le code
+sonar.tests=tests 
+# On indique à Sonarqube qu'il s'agit de code en JS
+sonar.language=js 
 
 sonar.test.exclusions=tests/setup.js # On exclu le fichier setup.js dans le dossier tests
 
