--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "cross-env": "^7.0.3",
     "mocha": "^10.2.0",
     "mocha-junit-reporter": "^2.2.1",
+    "mocha-sonarqube-reporter": "^1.0.2",
     "nodemon": "^3.0.1",
     "supertest": "^6.3.3"
   }
