--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -8,14 +8,14 @@ sonar.projectName=Api thetiptop
 sonar.projectVersion=1.0
 
 # Spécifiez les fichiers ou chemins à exclure de l'analyse
-sonar.exclusions=**/node_modules/**
+sonar.exclusions=**/node_modules/**, tests/setup.js, tests/user.test.js
 
 # Type de source
 sonar.sourceEncoding=UTF-8
 
 sonar.sources=.
 # On indique à Sonarqube qu'on a des tests dans le dossier TESTS pour qu'il comprenne mieux le code
-# sonar.tests=tests 
+sonar.tests=tests 
 # On indique à Sonarqube qu'il s'agit de code en JS
 sonar.language=js 
 
