Modify sonar properties files V2.8

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -8,7 +8,7 @@ sonar.projectName=Api thetiptop
 sonar.projectVersion=1.0
 
 # Spécifiez les fichiers ou chemins à exclure de l'analyse
-sonar.exclusions=**/node_modules/**, tests/setup.js, tests/user.test.js
+sonar.exclusions=**/node_modules/**, tests/setup.js, tests/user.test.js, tests/jackpot.test.js
 
 # Type de source
 sonar.sourceEncoding=UTF-8
