Modify sonar properties files V2.9 + Add nyc for coverage code reporter

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -19,7 +19,11 @@ sonar.tests=tests
 # On indique à Sonarqube qu'il s'agit de code en JS
 sonar.language=js 
 
+# Informations sur la couverture de code (si vous utilisez Karma pour les tests)
+sonar.javascript.lcov.reportPaths=coverage/lcov.info
 
+# Chemin vers le répertoire TypeScript (si vous utilisez TypeScript)
+sonar.typescript.lcov.reportPaths=coverage/lcov.info
 
 # Chemin vers le répertoire du rapport Mocha Junit Reporter
 sonar.testExecutionReportPaths=/var/jenkins_home/workspace/the-tiptop-api-2_dev/the-tiptop-api-dev/xunit.xml
