--- a/package.json
+++ b/package.json
@@ -3,8 +3,12 @@
   "version": "1.0.0",
   "description": "Cette Api a été mis en place, par un groupe d'étudiant, dans le cadre d'un projet de fin d'année pour validation du Diplome de Master 2 Architecte Web, il offre des points de terminaison pour le siteweb Jeux Concours Thé Tiptop ",
   "main": "server.js",
+  "nyc": {
+    "reporter": ["lcov", "text"],
+    "exclude": ["**/*.test.js"]
+  },
   "scripts": {
-    "test": "cross-env NODE_ENV=test mocha --config ./.mocharc.js --timeout 10000 --exit",
+    "test": "cross-env NODE_ENV=test nyc mocha --config ./.mocharc.js --timeout 10000 --exit",
     "init-db": "node init-db.js",
     "start": "node server.js",
     "seed": "node seed.js",
@@ -67,6 +71,7 @@
     "mocha-junit-reporter": "^2.2.1",
     "mocha-sonarqube-reporter": "^1.0.2",
     "nodemon": "^3.0.1",
+    "nyc": "^15.1.0",
     "supertest": "^6.3.3"
   }
 }
