--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -26,4 +26,4 @@ sonar.javascript.lcov.reportPaths=coverage/lcov.info
 sonar.typescript.lcov.reportPaths=coverage/lcov.info
 
 # Chemin vers le répertoire du rapport Mocha Junit Reporter
-# sonar.testExecutionReportPaths=/var/jenkins_home/workspace/the-tiptop-api-2_dev/the-tiptop-api-dev/xunit.xml
+sonar.testExecutionReportPaths=/var/jenkins_home/workspace/the-tiptop-api-2_dev/the-tiptop-api-dev/xunit.xml
