--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "argon2": "^0.31.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "csv-writer": "^1.6.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
