Ajout mailchimp env et installation npm

--- a/.env
+++ b/.env
@@ -13,6 +13,7 @@ GOOGLE_CLIENT_SECRET=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
 THETIPTOP_GMAIL_LOGIN=furiousducks196@gmail.com
 # THETIPTOP_GMAIL_PASSWORD=7ncYTQM$5Yyr3XJ4
 THETIPTOP_API_URL=http://api.dev.dsp-archiwebo22b-ji-rw-ah.fr/
+MAILCHIMP_API_KEY=fa94363e8759560d46003c85ddcdb3b7-us21
 
 ACCESS_TEST_DB_PORT=3306
 MYSQL_TEST_USER=testUser
