--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   ],
   "license": "ISC",
   "dependencies": {
+    "@mailchimp/mailchimp_marketing": "^3.0.80",
     "argon2": "^0.31.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
@@ -55,12 +56,14 @@
     "express-session": "^1.17.3",
     "faker": "^4.1.0",
     "fs": "^0.0.1-security",
+    "install": "^0.13.0",
     "jsonwebtoken": "^9.0.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.6.3",
     "node-cron": "^3.0.2",
     "nodemailer": "^6.9.7",
+    "npm": "^10.2.4",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
     "path": "^0.12.7",
