--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "start": "node server.js",
     "seed": "node seed.js",
     "dev": "npm run init-db && nodemon --watch .",
-    "start-with-seed": "npm run init-db && npm start"
+    "start-with-seed": "npm run init-db && npm start",
+    "preprod": "cross-env NODE_ENV=preprod npm run init-db && nodemon --watch ."
   },
   "repository": {
     "type": "git",
