--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     ]
   },
   "scripts": {
-    "test": "cross-env NODE_ENV=test nyc mocha --config ./.mocharc.js --timeout 10000 --exit",
+    "test": "cross-env NODE_ENV=dev nyc mocha --config ./.mocharc.js --timeout 10000 --exit",
     "init-db": "node init-db.js",
     "start": "node server.js",
     "seed": "node seed.js",
