--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -21,6 +21,9 @@ EXPOSE 4001
 
 RUN apk update && apk add bash
 
+# On mets la variable environnement de NODE_ENV à dev_test
+ENV NODE_ENV=dev_test
+
 # CMD ["npm", "run", "dev"]
 
 # CMD ["/usr/wait-for-it.sh", "db:3306", "--", "npm", "run", "dev"]
