remove '/' on THETIPTOP_API_URL in .env.dev

--- a/.env.dev
+++ b/.env.dev
@@ -13,7 +13,7 @@ GOOGLE_CLIENT_SECRET=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
 THETIPTOP_GMAIL_LOGIN=furiousducks196@gmail.com
 GOOGLE_CALLBACK_URL=https://api-dev.dsp-archiwebo22b-ji-rw-ah.fr/user/auth/google/callback
 # THETIPTOP_GMAIL_PASSWORD=7ncYTQM$5Yyr3XJ4
-THETIPTOP_API_URL=https://api-dev.dsp-archiwebo22b-ji-rw-ah.fr/
+THETIPTOP_API_URL=https://api-dev.dsp-archiwebo22b-ji-rw-ah.fr
 MAILCHIMP_API_KEY=31d46afadbe89aac8a2aac25db992a6e-us21
 
 ACCESS_TEST_DB_PORT=3306
