--- a/.env.prod
+++ b/.env.prod
@@ -14,6 +14,7 @@ THETIPTOP_GMAIL_LOGIN=furiousducks196@gmail.com
 GOOGLE_CALLBACK_URL=https://api.dsp-archiwebo22b-ji-rw-ah.fr/user/auth/google/callback
 # THETIPTOP_GMAIL_PASSWORD=7ncYTQM$5Yyr3XJ4
 THETIPTOP_API_URL=https://api.dsp-archiwebo22b-ji-rw-ah.fr
+THETIPTOP_FRONT_URL=https://dsp-archiwebo22b-ji-rw-ah.fr
 MAILCHIMP_API_KEY=31d46afadbe89aac8a2aac25db992a6e-us21
 
 ACCESS_TEST_DB_PORT=3306
