--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@mailchimp/mailchimp_marketing": "^3.0.80",
     "argon2": "^0.31.0",
     "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "csv-writer": "^1.6.0",
     "dotenv": "^16.3.1",
